# PropertyProspector

./: LICENSE  README.md  main.py  pyproject.toml
PropertyProspector/core/: database.py  scraper.py
PropertyProspector/models/: models.py
PropertyProspector/utils/: parser.py
PropertyProspector/websites/: imovel_web.py  zap_imoveis.py
test/: test_imovel_web.py  test_zap_imoveis.py
test/html/: imovel_web.html  zap_imoveis.html
test/snapshots/test_imovel_web/test_scraper/: imovel_web.json
test/snapshots/test_zap_imoveis/test_parser/: zap_imoveis.json
